package(default_visibility = ["//visibility:public"])

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

filegroup(
    name = "scripts",
    srcs = [
        "admin_upload.lua",
        "cache.lua",
        "clean_temp_dir.lua",
        "debug.lua",
        "delete_temp_file.lua",
        "exit.lua",
        "file_info.lua",
        "get_knora_session.lua",
        "json.lua",
        "jwt.lua",
        "send_response.lua",
        "sh.lua",
        "sipi.init-knora.lua",
        "sipi.init-knora-no-auth.lua",
        "sipi.init-knora-test.lua",
        "store.lua",
        "test1.lua",
        "test2.lua",
        "test_file_info.lua",
        "test_functions.lua",
        "test_knora_session_cookie.lua",
        "upload.lua",
        "util.lua",
    ],
)

pkg_tar(
    name = "sipi-scripts",
    srcs = [":scripts"],
    package_dir = "/sipi/scripts",
)
