package(default_visibility = ["//visibility:public"])

# bring our version constants in
load("//third_party:versions.bzl", "SCALA_VERSION", "AKKA_VERSION", "AKKA_HTTP_VERSION", "SIPI_VERSION", "FUSEKI_VERSION")

filegroup(
    name = "all",
    srcs = [
        "get_workspace_status",
    ],
)

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
)
