package(default_visibility = ["//visibility:public"])

# bring our version constants in
load("//third_party:versions.bzl", "AKKA_HTTP_VERSION", "AKKA_VERSION", "FUSEKI_VERSION", "SCALA_VERSION", "SIPI_VERSION")

filegroup(
    name = "all",
    srcs = [
        "get_workspace_status",
    ],
)

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
)
