package(default_visibility = ["//visibility:public"])

# bring our version constants in
load("//third_party:versions.bzl", "AKKA_HTTP_VERSION", "AKKA_VERSION", "FUSEKI_VERSION", "SCALA_VERSION", "SIPI_VERSION")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")

filegroup(
    name = "all",
    srcs = [
        "get_workspace_status",
    ],
)

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
)
